Spacing above results links. Fix #279.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -78,4 +78,8 @@
         }
     }
     
+    .video-links {
+        padding-top: 6px;
+    }
+    
 }
